removed all file saves outside project for use in AWS network; combined reports DB into viziapps_admin DB; Just use AWS RDS for all EC2 instances

--- a/Help/MySolutions/DownloadAndroid.htm
+++ b/Help/MySolutions/DownloadAndroid.htm
@@ -43,7 +43,7 @@ a:link
         <li style="height: 49px">On the Android phone, in the applications listing, tap the 
             <strong>Play Store</strong>. Your phone must support Android V. 2.2+ to work with 
             ViziApps. If you cannot find it in the <strong>Play Store</strong>
-            <a href="http://www.viziapps.mobi/customer_media/apps/ViziApps.apk">download it here.</a></li>
+            <a href="http://viziapps.s3-website-us-east-1.amazonaws.com/apps/ViziApps.apk">download it here.</a></li>
         <li style="height: 37px">Tap the search button.<br />
         </li>
         <li style="height: 36px">Enter <b>ViziApps</b>.<br />
