New help section added to  the 3 design pages

--- a/Help/Design/StoryBoardHelp.htm
+++ b/Help/Design/StoryBoardHelp.htm
@@ -5,7 +5,7 @@
     <title>StoryBoard Help</title>
 </head>
 <body>
-
+<div style="width:700px">
     <p style="margin-top: 0px; margin-bottom: 0px;">
         <span style="font-size: 14px; font-family: Verdana; color: rgb(50,50,50);">
         The <strong>Storyboard</strong> feature helps you better organize your app 
@@ -46,6 +46,6 @@
         location in the picture of the page is highlighted. In addition, if your mouse 
         is over a button, table or switch where an push action can occur, there will be 
         a connection to the page that the user will see next when they tap the field.</span></p>
-
+</div>
 </body>
 </html>
