revised design help; revised signature availability;fixed hybrid page transitions; changed http to https for studio links

--- a/Help/Design/AppPropertiesHelp.htm
+++ b/Help/Design/AppPropertiesHelp.htm
@@ -72,8 +72,8 @@
                 ViziApps fields and buttons in your javascript.</span></p>
        <p>
                 <span class="style6">
-                <strong>Set Page Transition Type</strong></span> Choose from fade, pop, flip turn, 
-                flow, slidefade, slide, slideup, slidedown, none. The default is fade.</p>
+                <strong>Set Page Transition Type</strong></span> Choose from slide, fade, pop, flip turn, 
+                flow, slidefade, slideup, slidedown. The default is slide.</p>
        <p class="style10">
                 <strong>For Web App Types Only:</strong></p>
        <p>
